1999-08-12  Alex Lancaster  <alex@santafe.edu>

	* Makefile (clean): Added target.

	* MousetrapBatchSwarm.java, MousetrapModelSwarm.java,
	MousetrapObserverSwarm.java, MousetrapStatistics.java,
	Mousetrap.java: Add Copyright information.

	* COPYING: Add GPL.

1999-08-11  Alex Lancaster  <alex@santafe.edu>

	* MousetrapModelSwarm.java (activateIn()): Create an
	ArchivedProbeDisplay for model ActivityControlImpl.

1999-08-10  Alex Lancaster  <alex@santafe.edu>

	* Mousetrap.java: Changed the following references to classnames
	Mousetrap{Observer,Model,Batch}SwarmImpl ->
	Mousetrap{Observer,Model,Batch}Swarm.

	* Makefile: Likewise.
	
	* MousetrapObserverSwarm.java, MousetrapBatchSwarm.java,
	MousetrapModelSwarm.java: New files, renamed by removing their
	respective `Impl' suffixes.  Changed all class names accordingly,
	throughout.  Removed old files.

1999-08-09  Alex Lancaster  <alex@santafe.edu>

	* MousetrapObserverSwarmImpl.java (buildObjects()): Uncomment code
	to handle ZoomRasterImpl probing.

	* MousetrapBatchSwarmImpl.java: Reformatting throughout.

	* MousetrapObserverSwarmImpl.java (MousetrapObserverSwarmImpl()):
	Use convenience constructors for instances of EmptyProbeMapImpl.
	Add javadoc-style comments for class and methods.

	* MousetrapModelSwarmImpl.java (MousetrapModelSwarmImpl():  Likewise.

	* Mousetrap.java (StartMoustrap.main()): Use Global.env.guiFlag
	from SwarmEnvironment to switch on/off GUI mode.  Add
	javadoc-style comments.

	* Start ChangeLog.


