@@ -1,3 +1,8 @@
+1999-08-17    <mgd@HELEN>
+
+	* StartMousetrap.java, Mousetrap.java: Move StartMousetrap class
+	to be public in StartMousetrap.java.
+
 1999-08-12  Alex Lancaster  <alex@santafe.edu>
 
 	* Makefile (clean): Added target.
